fix: minor footer spacing issue

--- a/src/components/pages/articles/article-post/article-post.css
+++ b/src/components/pages/articles/article-post/article-post.css
@@ -1,5 +1,6 @@
 
 .article-post {
+    min-height: 76vh;
 }
 
 .article-post__content {
